# deploying_openai_api_with_flask

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package.json  pyproject.toml  run.sh  webpack.config.js
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
assets/js/: main.js
deploying_openai_api_with_flask/: app.py  commands.py
deploying_openai_api_with_flask/public/: forms.py  views.py
deploying_openai_api_with_flask/static/: chatgpt.css  members.css
deploying_openai_api_with_flask/templates/: footer.html  layout.html  nav.html
deploying_openai_api_with_flask/templates/public/: home.html
deploying_openai_api_with_flask/templates/users/: chatgpt.html  dalle.html  members.html
deploying_openai_api_with_flask/user/: models.py  views.py
requirements/: dev.txt  prod.txt
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  test_database.py  test_forms.py  test_functional.py  test_models.py
