[tool.poetry]
name = "deploying-openai-api-with-flask"
version = "0.1.0"
description = ""
authors = ["Dat Tran <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=7.0"
flask = "==2.3.3"
werkzeug = "==2.3.7"
flask-sqlalchemy = "==3.1.1"
psycopg2-binary = "==2.9.8"
sqlalchemy = "==2.0.22"
flask-migrate = "==4.0.5"
email-validator = "==2.0.0.post2"
flask-wtf = "==1.2.1"
wtforms = "==3.0.1"
gevent = "==23.9.1"
gunicorn = ">=19.9.0"
supervisor = "==4.2.5"
flask-static-digest = "==0.4.0"
flask-bcrypt = "==1.0.1"
flask-login = "==0.6.2"
flask-caching = ">=2.0.2"
flask-debugtoolbar = "==0.13.1"
environs = "==9.5.0"
openai = "^0.28.1"


[tool.poetry.group.dev.dependencies]
factory-boy = "3.3.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
webtest = "3.0.0"
black = "23.12.1"
flake8-blind-except = "0.2.1"
flake8-debugger = "4.1.2"
flake8-docstrings = "1.7.0"
flake8-isort = "6.1.0"
flake8 = "6.1.0"
isort = "5.12.0"
pep8-naming = "0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]
